<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorRed"
        android:gravity="center"
        android:text="@string/hyderabad"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvPlace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/place_margin_top"
        android:background="@color/colorRed"
        android:gravity="center"
        android:text="@string/pune"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        app:autoSizeTextType="uniform"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvName,tvPlace" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvCountry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/country_margin_start"
        android:background="@color/colorRed"
        android:gravity="center"
        android:text="@string/india"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintLeft_toRightOf="@+id/barrier"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>